[package]
name = "rust_uuid"
version = "0.1.0"
authors = ["katsyoshi <github@katsyoshi.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = "0.9"
rb-allocator = "0.9"
magnus = { version = "0.4", features = ["rb-sys-interop"] }

[dependencies.uuid]
version = "1.1.2"
features = [
  "v4",
  # "fast-rng",
]
